add static contact page and functional links

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,1 +1,5 @@
-{{outlet}}
+<h4>If you have props to give or tomatoes to throw...</h4>
+
+<p>susha.dore@gmail.com</p>
+
+{{#link-to "about"}}About{{/link-to}}
