add connectivity to Firebase diplaying blog posts

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,6 @@
-<h1> title of blog will go here</h1>
 
-
-<p> body of blog will go here</p>
-<p>date of blog entry will go here & contributors</p>
-
-{{outlet}}
+<ul>
+  {{#each model as |entry|}}
+     <li><h3>{{entry.title}}</<h3><br> {{entry.content}}<br><strong>{{entry.date}}</strong></li>
+  {{/each}}
+</ul>
