--- a/app/templates/components/new-entry.hbs
+++ b/app/templates/components/new-entry.hbs
@@ -4,15 +4,15 @@
     <form>
       <div class="form-group">
         <label for="title">Title</label>
-        {{input value=title id="author"}}
+        {{input class="form-control" value=title id="author"}}
       </div>
       <div class="form-group">
         <label for="date">Date</label>
-        {{input value=date id="date"}}
+        {{input class="form-control" value=date id="date"}}
       </div>
       <div class="form-group">
-        <label for="content"></label>
-        {{input value=content id="content"}}
+        <label for="content">Content</label>
+        {{textarea rows=5 class="form-control" value=content id="content"}}
       </div>
       <button class="btn" {{action "saveEntry"}}>Save</button>
     </form>
