--- a/app/templates/components/update-entry.hbs
+++ b/app/templates/components/update-entry.hbs
@@ -1,1 +1,21 @@
-{{yield}}
+{{ifUpdateEntryForm}}
+  <h2>Update {{entry.title}}</h2>
+  <div>
+    <form>
+      <div class="form-group">
+        <label for="title">Title</label>
+        {{input class="form-control" value=title id="author" }}
+      </div>
+      <div class="form-group">
+        <label for="date">Date</label>
+        {{input class="form-control" value=date id="date"}}
+      </div>
+      <div class="form-group">
+        <label for="content">Content</label>
+        {{textarea rows=5 class="form-control" value=content id="content"}}
+      </div>
+      <button class="btn" {{action "saveEntry"}}>Save</button>
+
+    </form>
+  </div>
+{{/if}}
