--- a/app/templates/entry.hbs
+++ b/app/templates/entry.hbs
@@ -1,2 +1,3 @@
-<h1>{{model.title}}</h1>
 {{entry-detail entry=model destroyEntry="destroyEntry"}}
+<br>
+{{update-entry entry=model update="update"}}
