--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 <ul>
   {{#each model as |entry|}}
-     <li><h3>{{entry.title}}</<h3><br> {{entry.content}}<br><strong>{{entry.date}}</strong></li>
+     {{entry-tile entry=entry}}
   {{/each}}
 </ul>
 
