--- a/app/templates/components/update-entry.hbs
+++ b/app/templates/components/update-entry.hbs
@@ -1,21 +1,22 @@
-{{ifUpdateEntryForm}}
+{{#if updateEntryForm}}
   <h2>Update {{entry.title}}</h2>
   <div>
     <form>
       <div class="form-group">
         <label for="title">Title</label>
-        {{input class="form-control" value=title id="author" }}
+        {{input class="form-control" value=title id="author" placeholder=entry.title}}
       </div>
       <div class="form-group">
         <label for="date">Date</label>
-        {{input class="form-control" value=date id="date"}}
+        {{input class="form-control" value=date id="date" placeholder=entry.date}}
       </div>
       <div class="form-group">
         <label for="content">Content</label>
-        {{textarea rows=5 class="form-control" value=content id="content"}}
+        {{textarea rows=5 class="form-control" value=content id="content" placeholder=entry.content}}
       </div>
-      <button class="btn" {{action "saveEntry"}}>Save</button>
-
+      <button class="btn" {{action "update" entry}}>Save</button>
     </form>
   </div>
+{{else}}
+  <button class="btn" {{action "updateEntryForm"}}>Update</button>
 {{/if}}
