--- a/app/templates/components/new-entry.hbs
+++ b/app/templates/components/new-entry.hbs
@@ -4,7 +4,7 @@
     <form>
       <div class="form-group">
         <label for="title">Title</label>
-        {{input class="form-control" value=title id="author"}}
+        {{input class="form-control" value=title id="title"}}
       </div>
       <div class="form-group">
         <label for="date">Date</label>
