--- a/app/templates/entry.hbs
+++ b/app/templates/entry.hbs
@@ -1,3 +1,5 @@
 {{entry-detail entry=model destroyEntry="destroyEntry"}}
 <br>
 {{update-entry entry=model update="update"}}
+
+{{new-comment saveComment="saveComment" entry=model}}
