delete comments from database when entry is deleted

--- a/app/templates/components/comment-tile.hbs
+++ b/app/templates/components/comment-tile.hbs
@@ -1,1 +1,3 @@
 <li>{{comment.date}}: {{comment.name}}, {{comment.comment}}</li>
+
+<button class="btn" {{action "delete" comment}}>Delete Comment</button>
