--- a/app/templates/entry.hbs
+++ b/app/templates/entry.hbs
@@ -1,4 +1,4 @@
-{{entry-detail entry=model destroyEntry="destroyEntry"}}
+{{entry-detail entry=model destroyEntry="destroyEntry" destroyComment="destroyComment"}}
 <br>
 {{update-entry entry=model update="update"}}
 
