remove update-entry component to streamline functionality

--- a/app/templates/components/comment-tile.hbs
+++ b/app/templates/components/comment-tile.hbs
@@ -1,3 +1,3 @@
-<li>{{comment.date}}: {{comment.name}}, {{comment.comment}}</li>
+<li>{{comment.date}}: {{comment.name}}, {{comment.content}}</li>
 
-<button class="btn" {{action "delete" comment}}>Delete Comment</button>
+<button class="btn" {{action "delete" comment}}>Delete</button>
