--- a/app/templates/components/new-comment.hbs
+++ b/app/templates/components/new-comment.hbs
@@ -11,8 +11,8 @@
         {{input class="form-control" value=date id="date"}}
       </div>
       <div class="form-group">
-        <label for="comment">Comment</label>
-        {{textarea rows=2 class="form-control" value=comment id="comment"}}
+        <label for="content">Comment</label>
+        {{textarea rows=2 class="form-control" value=content id="content"}}
       </div>
       <button class="btn" {{action "saveComment"}}>Save</button>
     </form>
