--- a/app/templates/entry.hbs
+++ b/app/templates/entry.hbs
@@ -1,5 +1,4 @@
-{{entry-detail entry=model destroyEntry="destroyEntry" destroyComment="destroyComment"}}
-<br>
-{{update-entry entry=model update="update"}}
+{{entry-detail entry=model update="update" destroyEntry="destroyEntry" destroyComment="destroyComment"}}
 
+<br>
 {{new-comment saveComment="saveComment" entry=model}}
